-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.x
-
None
-
cdec5b79299a0740cc79759a16b87b484528690d (qtbase/dev) a11d4cf22329fa2cf093bc39adfcd07b2fae0d95 (qtbase/6.4) 81b64de49193309a18d937f42e0d8492253b5b65 (qtbase/6.3) 03bc058418 (qt/tqtc-qt5compat/6.2.6) 03bc058418 (qt/tqtc-qt5compat/6.2-opensource)
Current dev fails to compile with GCC 12:
In file included from /home/tjmaciei/obj/qt/qt6-release/qtbase/include/QtCore/6.4.0/QtCore/private/qendian_p.h:1,
from /home/tjmaciei/src/qt/qt6-release/qt5compat/src/core5/serialization/qbinaryjson_p.h:58,
from /home/tjmaciei/src/qt/qt6-release/qt5compat/src/core5/serialization/qbinaryjson.cpp:40:
In member function ‘QSpecialIntegerAccessor<S, pos, width, T>& QSpecialIntegerAccessor<S, pos, width, T>::operator=(Type) [with S = QLittleEndianStorageType<unsigned int>; int pos = 0; int width = 1; T = unsigned int]’,
inlined from ‘void QSpecialIntegerBitfieldUnion<S, Accessors>::set(typename A::Type) [with A = QSpecialIntegerAccessor<QLittleEndianStorageType<unsigned int>, 0, 1, unsigned int>; S = QLittleEndianStorageType<unsigned int>; Accessors = {QSpecialIntegerAccessor<QLittleEndianStorageType<unsigned int>, 0, 1, unsigned int>, QSpecialIntegerAccessor<QLittleEndianStorageType<unsigned int>, 1, 31, unsigned int>}]’ at /home/tjmaciei/obj/qt/qt6-release/qtbase/include/QtCore/6.4.0/QtCore/private/../../../../../../../../../src/qt/qt6/qtbase/src/corelib/global/qendian_p.h:214:21,
inlined from ‘void QBinaryJsonPrivate::Base::setIsObject()’ at /home/tjmaciei/src/qt/qt6-release/qt5compat/src/core5/serialization/qbinaryjson_p.h:329:65,
inlined from ‘void QBinaryJsonPrivate::MutableData::compact()’ at /home/tjmaciei/src/qt/qt6-release/qt5compat/src/core5/serialization/qbinaryjson.cpp:266:23:
/home/tjmaciei/obj/qt/qt6-release/qtbase/include/QtCore/6.4.0/QtCore/private/../../../../../../../../../src/qt/qt6/qtbase/src/corelib/global/qendian_p.h:179:40: error: ‘((Storage*)h)[3].QSpecialIntegerStorage<QLittleEndianStorageType<unsigned int> >::val’ may be used uninitialized [-Werror=maybe-uninitialized]
179 | UnsignedType i = S::fromSpecial(storage->val);
| ~~~~~~~~~~~~~~^~~~~~~~~~~~~~
In member function ‘QSpecialIntegerAccessor<S, pos, width, T>& QSpecialIntegerAccessor<S, pos, width, T>::operator=(Type) [with S = QLittleEndianStorageType<unsigned int>; int pos = 0; int width = 1; T = unsigned int]’,
inlined from ‘void QSpecialIntegerBitfieldUnion<S, Accessors>::set(typename A::Type) [with A = QSpecialIntegerAccessor<QLittleEndianStorageType<unsigned int>, 0, 1, unsigned int>; S = QLittleEndianStorageType<unsigned int>; Accessors = {QSpecialIntegerAccessor<QLittleEndianStorageType<unsigned int>, 0, 1, unsigned int>, QSpecialIntegerAccessor<QLittleEndianStorageType<unsigned int>, 1, 31, unsigned int>}]’ at /home/tjmaciei/obj/qt/qt6-release/qtbase/include/QtCore/6.4.0/QtCore/private/../../../../../../../../../src/qt/qt6/qtbase/src/corelib/global/qendian_p.h:214:21,
inlined from ‘void QBinaryJsonPrivate::Base::setIsArray()’ at /home/tjmaciei/src/qt/qt6-release/qt5compat/src/core5/serialization/qbinaryjson_p.h:332:64,
inlined from ‘void QBinaryJsonPrivate::MutableData::compact()’ at /home/tjmaciei/src/qt/qt6-release/qt5compat/src/core5/serialization/qbinaryjson.cpp:268:22:
/home/tjmaciei/obj/qt/qt6-release/qtbase/include/QtCore/6.4.0/QtCore/private/../../../../../../../../../src/qt/qt6/qtbase/src/corelib/global/qendian_p.h:179:40: error: ‘((Storage*)h)[3].QSpecialIntegerStorage<QLittleEndianStorageType<unsigned int> >::val’ may be used uninitialized [-Werror=maybe-uninitialized]
179 | UnsignedType i = S::fromSpecial(storage->val);
| ~~~~~~~~~~~~~~^~~~~~~~~~~~~~
- duplicates
-
QTBUG-103924 GCC 12: failure to build from source [<QtDeclarative>]
-
- Closed
-